--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,12 +34,16 @@ application.langs="en"
 # db.default.password=
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:"${DATABASE_URL_DB}
+#db.default.user=${DATABASE_USERNAME_DB}
+#db.default.password=${DATABASE_PASSWORD_DB}
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 evolutionplugin=enable
+applyEvolutions.default=true
 
 # Ebean configuration
 # ~~~~~
