--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,16 +28,16 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
- db.default.driver=org.h2.Driver
- db.default.url="jdbc:h2:file:h2bd"
+# db.default.driver=org.h2.Driver
+# db.default.url="jdbc:h2:file:h2bd"
 # db.default.user=sa
 # db.default.password=
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-#db.default.driver=com.mysql.jdbc.Driver
-#db.default.url="jdbc:"${DATABASE_URL_DB}
-#db.default.user=${DATABASE_USERNAME_DB}
-#db.default.password=${DATABASE_PASSWORD_DB}
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:"${DATABASE_URL_DB}
+db.default.user=${DATABASE_USERNAME_DB}
+db.default.password=${DATABASE_PASSWORD_DB}
 
 # Evolutions
 # ~~~~~
