--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,12 +38,15 @@ db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:"${DATABASE_URL_DB}
 db.default.user=${DATABASE_USERNAME_DB}
 db.default.password=${DATABASE_PASSWORD_DB}
+#db.default.url="jdbc:mysql://localhost/dinamo?characterEncoding=UTF-8"
+#db.default.user=dinamo
+#db.default.password=dinamo
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 evolutionplugin=enable
-applyEvolutions.default=true
+#applyEvolutions.default=true
 
 # Ebean configuration
 # ~~~~~
