--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 app.name = "Dinamo-i18n"
 app.version = "0.0.1.SNAPSHOT"
 
-translation.automatic = true
+translation.automatic = false
 
 # Secret key
 # ~~~~~
@@ -35,12 +35,12 @@ application.langs="en"
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:"${DATABASE_URL_DB}
-db.default.user=${DATABASE_USERNAME_DB}
-db.default.password=${DATABASE_PASSWORD_DB}
-#db.default.url="jdbc:mysql://localhost/dinamo?characterEncoding=UTF-8"
-#db.default.user=dinamo
-#db.default.password=dinamo
+#db.default.url="jdbc:"${DATABASE_URL_DB}
+#db.default.user=${DATABASE_USERNAME_DB}
+#db.default.password=${DATABASE_PASSWORD_DB}
+db.default.url="jdbc:mysql://localhost/dinamo?characterEncoding=UTF-8"
+db.default.user=dinamo
+db.default.password=dinamo
 
 # Evolutions
 # ~~~~~
