--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 app.name = "Dinamo-i18n"
 app.version = "0.0.1.SNAPSHOT"
 
-translation.automatic = false
+translation.automatic = true
 
 # Secret key
 # ~~~~~
@@ -28,25 +28,25 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:file:h2bd"
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:file:h2bd"
 # db.default.user=sa
 # db.default.password=
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-db.default.driver=com.mysql.jdbc.Driver
+#db.default.driver=com.mysql.jdbc.Driver
 #db.default.url="jdbc:"${DATABASE_URL_DB}
 #db.default.user=${DATABASE_USERNAME_DB}
 #db.default.password=${DATABASE_PASSWORD_DB}
-db.default.url="jdbc:mysql://localhost/dinamo?characterEncoding=UTF-8"
-db.default.user=dinamo
-db.default.password=dinamo
+#db.default.url="jdbc:mysql://localhost/dinamo?characterEncoding=UTF-8"
+#db.default.user=dinamo
+#db.default.password=dinamo
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 evolutionplugin=enable
-#applyEvolutions.default=true
+applyEvolutions.default=true
 
 # Ebean configuration
 # ~~~~~
