--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,9 +3,10 @@
 
 # The app
 app.name = "Dinamo-i18n"
-app.version = "0.0.1.SNAPSHOT"
+app.version = "0.0.4.SNAPSHOT"
 
-translation.automatic = true
+translation.automatic = false
+save.to.dropbox = false
 
 # Secret key
 # ~~~~~
