--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,8 +5,8 @@
 app.name = "Dinamo-i18n"
 app.version = "0.0.6.SNAPSHOT"
 
-translation.automatic = false
-save.to.dropbox = false
+translation.automatic = true
+save.to.dropbox = true
 
 # Secret key
 # ~~~~~
@@ -29,19 +29,19 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:file:h2bd"
-# db.default.user=sa
-# db.default.password=
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:file:h2bd"
+## db.default.user=sa
+## db.default.password=
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-#db.default.driver=com.mysql.jdbc.Driver
+db.default.driver=com.mysql.jdbc.Driver
 #db.default.url="jdbc:"${DATABASE_URL_DB}
 #db.default.user=${DATABASE_USERNAME_DB}
 #db.default.password=${DATABASE_PASSWORD_DB}
-#db.default.url="jdbc:mysql://localhost/dinamo?characterEncoding=UTF-8"
-#db.default.user=dinamo
-#db.default.password=dinamo
+db.default.url="jdbc:mysql://localhost/dinamo?characterEncoding=UTF-8"
+db.default.user=dinamo
+db.default.password=dinamo
 
 # Evolutions
 # ~~~~~
